# rddns

./: Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: rust_build_release.yml  rust_check.yml
src/: config.rs  lib.rs  main.rs  nsd.rs  routers.rs  server.rs
